--- a/public/views/dash.html
+++ b/public/views/dash.html
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Dash Board Page</h1>
+        <ul>
+        <li ng-repeat="l in menu" >{{l.type}} - {{l.lable}}</li>
+        </ul>
     </div>
 </div>
