--- a/public/views/dash.html
+++ b/public/views/dash.html
@@ -1,8 +1,34 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Dash Board Page</h1>
-        <ul>
-        <li ng-repeat="l in menu" >{{l.type}} - {{l.lable}}</li>
-        </ul>
     </div>
+</div>
+<div class="row">
+    <div class="col-sm-2 dashItme">
+        Today's Serving<br/>
+        Employees : 120<br/>
+        Guest : 10
+    </div>
+    <div class="col-sm-2 dashItme">
+        Weekly Serving<br/>
+        Employees : 600<br/>
+        Guest : 40
+    </div>
+    <div class="col-sm-2 dashItme">
+        This Month Serving<br/>
+        Employees : 1600<br/>
+        Guest : 140
+    </div>
+    <div class="col-sm-2 dashItme">
+        Stock Levels<br/>
+        Rice : 100kg<br/>
+        Oil : 10ltrs
+        Dal : 10ltrs
+        Curries : 5kg
+    </div>
+    <div class="col-sm-2 dashItme">
+        Per Meal Cost<br/>
+        Rs. 24/-
+    </div>    
+
 </div>
