--- a/public/views/actions/tokenIssue.html
+++ b/public/views/actions/tokenIssue.html
@@ -1,6 +1,28 @@
+<div ng-controller="tokenCtrl">
 <div class="row">
     <div class="col-sm-12">
-        <h1>Action -tokenIssue</h1>
-       
+        <h1>Masters -Department</h1>
+            {{deptName}}
     </div>
+</div>
+<div class="row">
+     <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
+    <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">EmployeeID</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Employee ID">
+          </div>
+         
+        <div class="form-group">
+            <label for="exampleInputPassword1">Food Item</label>
+            <select class="form-control" id="exampleInputPassword1">
+                <option>Meal</option>
+                <option>Snacks</option>
+            </select>
+          </div>
+
+          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+</form>
+    </div> 
+</div>    
 </div>
