--- a/public/views/masters/employee.html
+++ b/public/views/masters/employee.html
@@ -1,6 +1,35 @@
+<div ng-controller="empCtrl">
 <div class="row">
     <div class="col-sm-12">
-        <h1>Masters -Employee</h1>
-       
+        <h1>Masters -Department</h1>
+            {{deptName}}
     </div>
+</div>
+<div class="row">
+     <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
+    <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">EmployeeID</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Employee ID">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Employee Name</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name of employee">
+          </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Phone Number</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
+          </div> 
+        <div class="form-group">
+            <label for="exampleInputPassword1">Phone Number</label>
+            <select class="form-control" id="exampleInputPassword1">
+                <option>Depart 1</option>
+                <option>Depart 2</option>
+            </select>
+          </div>
+
+          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+</form>
+    </div> 
+</div>    
 </div>
