--- a/public/views/masters/store.html
+++ b/public/views/masters/store.html
@@ -1,6 +1,31 @@
+<div ng-controller="storeCtrl">
 <div class="row">
     <div class="col-sm-12">
-        <h1>Masters -Store</h1>
-       
+        <h1>Masters -Department</h1>
+            {{deptName}}
     </div>
+</div>
+        <div class="row">
+        <div class="panel-heading"> 
+        <h3 class="panel-title">Master</h3> </div> 
+        <div class="panel-body">  content </div> </div>
+    
+    </div>
+
+<div class="row">
+     <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
+    <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Store Name</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Store">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Description</label>
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+          </div>
+
+          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+</form>
+    </div> 
+</div>    
 </div>
