--- a/public/views/reports/dailyReport.html
+++ b/public/views/reports/dailyReport.html
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Reports -dailyReport</h1>
-       
+
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Report title</h3> </div> 
+        <div class="panel-body"> Report content </div> </div>
     </div>
 </div>
