--- a/public/views/reports/monthlyReport.html
+++ b/public/views/reports/monthlyReport.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Reports -monthlyReport</h1>
-       
+       <div class="panel panel-primary">
+        </div>
     </div>
 </div>
