forms design new

--- a/public/views/reports/costReport.html
+++ b/public/views/reports/costReport.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Reports -costReport</h1>
-       
+       <div class="panel panel-primary">...</div>
     </div>
 </div>
