--- a/public/views/masters/employee.html
+++ b/public/views/masters/employee.html
@@ -5,6 +5,13 @@
             {{deptName}}
     </div>
 </div>
+        <div class="row">
+        <div class="panel-heading"> 
+        <h3 class="panel-title">Master</h3> </div> 
+        <div class="panel-body">  content </div> </div>
+    
+    </div>
+
 <div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
     <form>
