--- a/public/views/masters/foodItem.html
+++ b/public/views/masters/foodItem.html
@@ -1,18 +1,29 @@
 <div ng-controller="foodCtrl">
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Masters -Department</h1>
-            {{deptName}}
-    </div>
+<div class="col-sm-12">
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Food Item List</h3> </div> 
+        <div class="panel-body">
+            <table class="table">
+            <thead>
+                <tr>
+                    <td>Food item</td><td>Descripation</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="f in foodItem">
+                    <td>{{f.fooditem}}</td><td>{{f.desc}}</td>
+            
+                </tr>
+                </tbody>
+                
+            </table>
+        
+        </div> 
+        </div>
 </div>
-        <div class="row">
-        <div class="panel-heading"> 
-        <h3 class="panel-title">Master</h3> </div> 
-        <div class="panel-body">  content </div> 
-    </div>
-    
-    
-
+</div>
 
 <div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
@@ -26,8 +37,8 @@
             <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
           </div>
 
-          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
-</form>
+          <button type="submit" ng-click="saveAction()" class="btn btn-default">Submit</button>
+         </form>
     </div> 
 </div>    
 </div>
