--- a/public/views/actions/purchaseReturn.html
+++ b/public/views/actions/purchaseReturn.html
@@ -1,11 +1,5 @@
 <div ng-controller="purchaseReturnCtrl">
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Masters -Department</h1>
-            {{deptName}}
-    </div>
-</div>
-<div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
     <form>
           <div class="form-group">
@@ -20,9 +14,7 @@
         <div class="form-group">
             <label for="exampleInputPassword1">Stock Itme</label>
             <select class="form-control" id="exampleInputPassword1">
-                <option>Stock Item1</option>
-                <option>Stock Item2</option>
-                <option>Stock Item3</option>
+                <option ng-repeat="si in stockItem">{{si.stockitem}}</option>
             </select>
           </div>
           <div class="form-group">
@@ -36,12 +28,11 @@
         <div class="form-group">
             <label for="exampleInputPassword1">Store</label>
             <select class="form-control" id="exampleInputPassword1">
-                <option>Store1</option>
-                <option>Store2</option>
+                <option ng-repeat="s in store">{{s.storeName}}</option>
+                
             </select>
           </div>
-
-          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
 </form>
     </div> 
 </div>    
