--- a/public/views/masters/department.html
+++ b/public/views/masters/department.html
@@ -1,30 +1,42 @@
 <div ng-controller="deptCtrl">
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Masters -Department</h1>
-            {{deptName}}
-    </div>
+<div class="col-sm-12">
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Department List</h3> </div> 
+        <div class="panel-body">
+            <table class="table">
+            <thead>
+                <tr>
+                    <td>Department Name</td><td>Description</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="d in department">
+                    <td>{{d.deptName}}</td><td>{{d.desc}}</td>
+                </tr>
+                </tbody>
+                
+            </table>
+        
+        </div> 
+        </div>
 </div>
-    <div class="row">
-        <div class="panel-heading"> 
-        <h3 class="panel-title">Master</h3> </div> 
-        <div class="panel-body">  content </div> </div>
-    
-    </div>
+</div>
     
 <div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Department Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Department Name">
+            <input type="text" class="form-control" ng-model="master.deptName" id="exampleInputEmail1" placeholder="Department Name">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+            <input type="text" class="form-control" ng-model="master.desc" id="exampleInputPassword1" placeholder="Description">
           </div>
 
-          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
 </form>
     </div> 
 </div>    
