--- a/public/views/masters/employee.html
+++ b/public/views/masters/employee.html
@@ -1,41 +1,52 @@
 <div ng-controller="empCtrl">
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Masters -Department</h1>
-            {{deptName}}
-    </div>
+<div class="col-sm-12">
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Employee List</h3> </div> 
+        <div class="panel-body">
+            <table class="table">
+            <thead>
+                <tr>
+                    <td>EmpId</td><td>Employee Name</td><td>Phone</td><td>Department</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="e in employee">
+                    <td>{{e.empId}}</td><td>{{e.empName}}</td><td>{{e.phone}}</td><td>{{e.deptId}}</td>
+                </tr>
+                </tbody>
+                
+            </table>
+        
+        </div> 
+        </div>
 </div>
-        <div class="row">
-        <div class="panel-heading"> 
-        <h3 class="panel-title">Master</h3> </div> 
-        <div class="panel-body">  content </div> </div>
-    
-    </div>
-
+</div>
 <div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">EmployeeID</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Employee ID">
+            <input type="text" class="form-control" ng-model="master.empId" id="exampleInputEmail1" placeholder="Employee ID">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Employee Name</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name of employee">
+            <input type="text" class="form-control" ng-model="master.name" id="exampleInputPassword1"  placeholder="Name of employee">
           </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Phone Number</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
+            <input type="text" ng-model="master.phone" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
           </div> 
         <div class="form-group">
-            <label for="exampleInputPassword1">Phone Number</label>
-            <select class="form-control" id="exampleInputPassword1">
-                <option>Depart 1</option>
-                <option>Depart 2</option>
+            <label for="exampleInputPassword1">Department</label>
+            <select class="form-control" ng-model="master.deptId" id="exampleInputPassword1">
+                <option ng-repeat="e in department" >{{e.deptName}}</option>
+                
             </select>
           </div>
 
-          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
 </form>
     </div> 
 </div>    
