--- a/public/views/masters/stockGroup.html
+++ b/public/views/masters/stockGroup.html
@@ -1,17 +1,28 @@
 <div ng-controller="sGroupCtrl">
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Masters -Department</h1>
-            {{deptName}}
-    </div>
+<div class="col-sm-12">
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Stock Group List</h3> </div> 
+        <div class="panel-body">
+            <table class="table">
+            <thead>
+                <tr>
+                    <td>Stock Group</td><td>Description</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="sg in stockGroup">
+                    <td>{{sg.stockGroup}}</td><td>{{sg.desc}}</td>
+                </tr>
+                </tbody>
+                
+            </table>
+        
+        </div> 
+        </div>
 </div>
-        <div class="row">
-        <div class="panel-heading"> 
-        <h3 class="panel-title">Master</h3> </div> 
-        <div class="panel-body">  content </div> </div>
-    
-    </div>
-
+</div>
 <div class="row">
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
     <form>
@@ -24,7 +35,7 @@
             <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
           </div>
 
-          <button type="submit" ng-click="loginAction()" class="btn btn-default">Submit</button>
+          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
 </form>
     </div> 
 </div>    
