--- a/public/views/masters/foodItem.html
+++ b/public/views/masters/foodItem.html
@@ -8,12 +8,12 @@
             <table class="table">
             <thead>
                 <tr>
-                    <td>Food item</td><td>Descripation</td>
+                    <td>Food item</td><td>Descripation</td><td>Regular Rate</td><td>Employee Rate</td>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="f in foodItem">
-                    <td>{{f.fooditem}}</td><td>{{f.desc}}</td>
+                    <td>{{f.fooditem}}</td><td>{{f.desc}}</td><td>{{f.rate}}</td><td>{{f.empRate}}</td>
             
                 </tr>
                 </tbody>
@@ -35,6 +35,14 @@
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
             <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+          </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Regular Rate</label>
+            <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Regular Rate">
+          </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Employee Rate</label>
+            <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Employee Rate">
           </div>
 
           <button type="submit" ng-click="saveAction()" class="btn btn-default">Submit</button>
