--- a/public/views/masters/department.html
+++ b/public/views/masters/department.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="d in department">
-                    <td>{{d.deptName}}</td><td>{{d.desc}}</td>
+                    <td>{{d.name}}</td><td>{{d.description}}</td>
                 </tr>
                 </tbody>
                 
@@ -29,14 +29,14 @@
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Department Name</label>
-            <input type="text" class="form-control" ng-model="master.deptName" id="exampleInputEmail1" placeholder="Department Name">
+            <input type="text" class="form-control" ng-model="master.name" id="exampleInputEmail1" placeholder="Department name">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" ng-model="master.desc" id="exampleInputPassword1" placeholder="Description">
+            <input type="text" class="form-control" ng-model="master.description" id="exampleInputPassword1" placeholder="Description">
           </div>
 
-          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
+          <button type="submit" ng-click="deptSave()" class="btn btn-default">Save</button>
 </form>
     </div> 
 </div>    
