--- a/public/views/actions/tokenIssue.html
+++ b/public/views/actions/tokenIssue.html
@@ -5,12 +5,12 @@
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">EmployeeID</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Employee ID">
+            <input type="text" class="form-control"  ng-model="master.empid" id="exampleInputEmail1" placeholder="Employee ID">
           </div>
          
         <div class="form-group">
             <label for="exampleInputPassword1">Food Item</label>
-            <select class="form-control" id="exampleInputPassword1">
+            <select class="form-control" ng-model="master.fooditem" id="exampleInputPassword1">
                 <option ng-repeat="si in stockItem">{{si.stockitem}}</option>
             </select>
     
