--- a/public/views/masters/foodItem.html
+++ b/public/views/masters/foodItem.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="f in foodItem">
-                    <td>{{f.fooditem}}</td><td>{{f.desc}}</td><td>{{f.rate}}</td><td>{{f.empRate}}</td>
+                    <td>{{f.fooditem}}</td><td>{{f.fooditemdesc}}</td><td>{{f.regrate}}</td><td>{{f.emprate}}</td>
             
                 </tr>
                 </tbody>
@@ -30,19 +30,19 @@
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Food Item Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Food Item Name">
+            <input type="text" class="form-control" ng-model="master.fooditem" id="exampleInputEmail1" placeholder="Food Item Name">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+            <input type="text" class="form-control" ng-model="master.fooditemdesc" id="exampleInputPassword1" placeholder="Description">
           </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Regular Rate</label>
-            <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Regular Rate">
+            <input type="number" class="form-control" ng-model="master.regrate" id="exampleInputPassword1" placeholder="Regular Rate">
           </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Employee Rate</label>
-            <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Employee Rate">
+            <input type="number" class="form-control" ng-model="master.emprate" id="exampleInputPassword1" placeholder="Employee Rate">
           </div>
 
           <button type="submit" ng-click="saveAction()" class="btn btn-default">Submit</button>
