--- a/public/views/masters/stockGroup.html
+++ b/public/views/masters/stockGroup.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="sg in stockGroup">
-                    <td>{{sg.stockGroup}}</td><td>{{sg.desc}}</td>
+                    <td>{{sg.stockgroup}}</td><td>{{sg.stockgroupdesc}}</td>
                 </tr>
                 </tbody>
                 
@@ -28,11 +28,11 @@
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Stock Group Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Department Name">
+            <input type="text" class="form-control" ng-model="master.stockgroup" id="exampleInputEmail1" placeholder="Department Name">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+            <input type="text" class="form-control"  ng-model="master.stockgroupdesc" id="exampleInputPassword1" placeholder="Description">
           </div>
 
           <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
