--- a/public/views/masters/store.html
+++ b/public/views/masters/store.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="e in store">
-                    <td>{{e.storeName}}</td><td>{{e.desc}}</td>
+                    <td>{{e.store}}</td><td>{{e.storedesc}}</td>
                 </tr>
                 </tbody>
                 
@@ -28,11 +28,11 @@
     <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Store Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Store">
+            <input type="text" class="form-control" ng-model="master.store" id="exampleInputEmail1" placeholder="Store">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Description">
+            <input type="text" class="form-control" ng-model="master.storedesc"  id="exampleInputPassword1" placeholder="Description">
           </div>
           <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
 </form>
