--- a/public/views/actions/tokenIssue.html
+++ b/public/views/actions/tokenIssue.html
@@ -1,22 +1,78 @@
 <div ng-controller="tokenCtrl">
-
+   <form>
 <div class="row">
+  
      <div class="col-lg-2 col-md-4 col-sm-6  col-lg-offset-5 col-md-offset-4 col-sm-offset-3">
-    <form>
+   
+          <div class="form-group">
+            <label for="exampleInputEmail1">Date</label>
+            <input type="date" class="form-control"  ng-model="master.tokendate" id="exampleInputEmail1" placeholder="yyyy-mm-dd">
+          </div>
+     </div>
+ </div>  
+       <div class="row">
+            <div class="col-lg-2 col-md-4 col-md-offset-3 ">      
+                <h2>Employees</h2>
+
+           </div>    
+            <div class="col-lg-2 col-md-4 ">      
+                <h2>Guest</h2>
+           </div>    
+            <div class="col-lg-2 col-md-4 ">      
+                <h2>Management</h2>
+           </div>    
+       </div>
+<div class="row">    
+ <div class="col-lg-2 col-md-4 col-md-offset-3 ">         
           <div class="form-group">
             <label for="exampleInputEmail1">EmployeeID</label>
-            <input type="text" class="form-control"  ng-model="master.empid" id="exampleInputEmail1" placeholder="Employee ID">
+            <input type="text" class="form-control"  ng-model="emp.empid" id="exampleInputEmail1" placeholder="Employee ID">
           </div>
          
         <div class="form-group">
             <label for="exampleInputPassword1">Food Item</label>
             <select class="form-control" ng-model="master.fooditem" id="exampleInputPassword1">
-                <option ng-repeat="si in stockItem">{{si.stockitem}}</option>
+                <option ng-repeat="f in foodItem">{{f.fooditem}}</option>
             </select>
     
           </div>
-          <button type="submit" ng-click="saveAction()" class="btn btn-default">Save</button>
-</form>
+          <button type="submit" ng-click="saveEmpToken()" class="btn btn-default">Employee Token</button>
+       
+
     </div> 
+ <div class="col-lg-2 col-md-4">         
+                   <div class="form-group">
+            <label for="exampleInputEmail1">Guest Name</label>
+            <input type="text" class="form-control"  ng-model="gst.empid" id="exampleInputEmail1" placeholder="Guest Name">
+          </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Food Item</label>
+            <select class="form-control" ng-model="master.fooditem" id="exampleInputPassword1">
+                <option ng-repeat="f in foodItem">{{f.fooditem}}</option>
+            </select>
+    
+          </div>
+          <button type="submit" ng-click="saveGuestToken()" class="btn btn-default">Guest Token</button>
+       
+
+    </div>
+ <div class="col-lg-2 col-md-4">         
+                   <div class="form-group">
+            <label for="exampleInputEmail1">Guest Name</label>
+            <input type="text" class="form-control"  ng-model="admin.empid" id="exampleInputEmail1" placeholder="Guest Name">
+          </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Food Item</label>
+            <select class="form-control" ng-model="master.fooditem" id="exampleInputPassword1">
+                <option ng-repeat="f in foodItem">{{f.fooditem}}</option>
+            </select>
+    
+          </div>
+          <button type="submit" ng-click="saveAdminToken()" class="btn btn-default">Admin Token</button>
+
+
+    </div>          
+ 
 </div>    
+       </form>
 </div>
