--- a/public/views/reports/employeeReport.html
+++ b/public/views/reports/employeeReport.html
@@ -1,6 +1,34 @@
+<div ng-controller="employeeReportCtrl">
 <div class="row">
     <div class="col-sm-12">
-        <h1>Reports -employeeReport</h1>
-       <div class="panel panel-primary">...</div>
+        <h1>Employee Report</h1>
+        <div class="panel panel-primary">
+          <span class="input-group-addon" id="basic-addon1">Selecte Employee </span>
+            <select class="form-control" ng-model="master.emp" id="exampleInputPassword1">
+                <option ng-repeat="f in employee">{{f.name}}</option>
+            </select>
+       <span class="input-group-btn">
+        <button class="btn btn-default" type="button">View</button>
+      </span>
+           <table class="table">
+               <thead>
+                   <tr>
+                       <th>Date</th>
+                       <th>Food</th>
+                       <th>Cost</th>
+                       <th>Discount</th>
+                   </tr>                   
+               </thead>
+               <tbody>
+                   <tr  ng-repeat="t in tokens| filter:{name:master.emp}"> 
+                       <td>{{t.tokendate}}</td>
+                       <td>{{t.fooditem}}</td>
+                       <td>{{t.foodcost}}</td>
+                       <td>{{t.fooddiscount}}</td>
+                   </tr>
+               </tbody>
+            </table>
+        </div>
     </div>
+</div>
 </div>
